objects/Gong__Related_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Call_Duration_Min__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Call_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration (Min.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Contact_Full_Name__c</fullName>
        <formula>HYPERLINK( Gong__Related_Entity_ID__r.Id , Gong__Related_Entity_ID__r.FirstName &amp; &quot; &quot; &amp; Gong__Related_Entity_ID__r.LastName , &quot;target&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Related_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Participant_Emails__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Participants_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Primary_Account__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Gong__Gong_Interaction__r.Gong__Primary_Account__c,  Gong__Gong_Interaction__r.Gong__Primary_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Primary_Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Gong__Gong_Interaction__r.Gong__Primary_Opportunity__c,  Gong__Gong_Interaction__r.Gong__Primary_Opportunity__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Entity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gong Conversations</relationshipLabel>
        <relationshipName>Related_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Started__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Call_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gong__Title__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Gong Related Contacts</label>
    <nameField>
        <displayFormat>GC-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Related Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>